--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1022.0",
     "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "dynamodb-geo": "^0.4.0",
     "ejs": "^3.1.6",
